[project]
name = "research-mcp"
version = "0.1.0"
description = "MCP server for academic research: Scopus search, abstracts via CrossRef, author h-index via OpenAlex, OA PDFs via Unpaywall"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
research-mcp = "research_mcp.server:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
